--- a/about.html
+++ b/about.html
@@ -32,36 +32,42 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="nav-item"><a href="about.html">about</a></li>
-            <li class="active nav-item"><a href="index.html">LOGO</a></li>
+            <li class="active nav-item"><a href="about.html">about</a></li>
+            <li class="nav-item"><a href="index.html">LOGO</a></li>
             <li class="nav-item"><a href="products.html">products</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <!-- ~~~~~~~~~~~~~~ HERO IMAGE ~~~~~~~~~~~~~~~~~~~~~ -->
-    <div class="hero">
-      <div class="overlay">
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~ WHO WE ARE ~~~~~~~~~~~~~~~~~ -->
+    <div class="about-hero">
       <div class="container">
-        <div class="title">
-          <h1>HYP Salad Topper</h1>
-          <h2>Get more out of healthy eating: you deserve it.</h2>
+        <div class="big-image"></div>
+        <div class="who-we-are-text">
+          <h3>Who We Are</h3>
+          <p>We are a group of individuals who all lead very different but very active lifestyles. We prioritize healthy eating, but are often frustrated by our lack of options. Salads are great, but we find ourselves feeling hungry again less than an hour later. We made HYP for the people like us.
+          </p>
         </div>
-      </div>
-      </div>
-    </div>
+        <div class="small-image">
+        </div>
+        <div class="about-text about-text-one">
+          <h3>Our Mission</h3>
+          <p>As a team, we want to help people overcome the issues that we face everyday by making healthy, and fulfilling eating easier and more accessible to everyone.
+          </p>
+        </div>
 
-    <!-- ~~~~~~~~~~~~~~~~~~~~ BUTTONS ~~~~~~~~~~~~~~~~~~ -->
+        <div class="small-image small-image-hidden">
+        </div>
+        <div class="about-text about-text-two">
+          <h3>What We Made</h3>
+          <p>The solution that we divised is a salad topping or dip that is jampacked with 10g of protein per serving plus all the other good stuff like gluten free, non-gmo, organic and vegan.
+          </p>
+        </div>
+        <div class="small-image small-image-shown">
+        </div>
 
-    <div class="button-container container">
-      <p class="button-list">
-        <button type="button" class="btn btn-lg btn-green">10g Protein</button>
-        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-        <button type="button" class="btn btn-lg btn-green">Vegan</button>
-        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
-        <button type="button" class="btn btn-lg btn-green">Organic</button>
-      </p>
+      </div>
     </div>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -70,7 +76,7 @@
       <div class="container">
          <button type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</button>
          <button type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</button>
-         <button type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</button>
+          <button type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</button>
       </div>
     </div>
 
