--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active nav-item"><a href="about.html">about</a></li>
-            <li class="nav-item"><a href="index.html">LOGO</a></li>
+            <li class="nav-item"><a href="about.html">about</a></li>
+            <li class="active nav-item"><a href="index.html"><img class="logo" src="images/mr.topper.svg"></a></li>
             <li class="nav-item"><a href="products.html">products</a></li>
           </ul>
         </div><!--/.nav-collapse -->
