--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="nav-item"><a href="about.html">about</a></li>
-            <li class="active nav-item"><a href="index.html">LOGO</a></li>
+            <li class="active nav-item"><a href="index.html"><img class="logo" src="images/mr.topper.svg"></a></li>
             <li class="nav-item"><a href="products.html">products</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -45,8 +45,9 @@
       <div class="overlay">
       <div class="container">
         <div class="title">
-          <h1>HYP Salad Topper</h1>
-          <h2>Get more out of healthy eating: you deserve it.</h2>
+          <h1>HYP: Salad Topper</h1>
+          <img class="homepage-image" src="images/mr.topper.svg">
+          <h2>Because a salad shouldn't leave you hungry.</h2>
         </div>
       </div>
       </div>
