--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
   <body>
   
   <!-- ~~~~~~~~~~~~~~ NAV BAR ~~~~~~~~~~~~~~~~~~~~~ -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,8 +33,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="nav-item"><a href="about.html">about</a></li>
-            <li class="nav-item"><a href="index.html">LOGO</a></li>
-            <li class="active nav-item"><a href="products.html">products</a></li>
+            <li class="active nav-item"><a href="index.html"><img class="logo" src="images/mr.topper.svg"></a></li>
+            <li class="nav-item"><a href="products.html">products</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
