--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <link rel='stylesheet' href='styles.css' type='text/css' />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,63 +22,116 @@
   <body>
   
   <!-- ~~~~~~~~~~~~~~ NAV BAR ~~~~~~~~~~~~~~~~~~~~~ -->
-   <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">
+             HYP
+            </a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active nav-item"><a href="about.html">about</a></li>
-            <li class="nav-item"><a href="index.html"><img class="logo" src="images/mr.topper.svg"></a></li>
-            <li class="nav-item"><a href="products.html">products</a></li>
+            <li class="active"><a href="about.html">about</a></li>
+            <li><a href="products.html">products</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">Interested?</a>
+        </div>
+      </nav>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ WHO WE ARE ~~~~~~~~~~~~~~~~~ -->
     <div class="about-hero">
       <div class="container">
         <div class="big-image"></div>
         <div class="who-we-are-text">
-          <h3>Who We Are</h3>
-          <p>We are a group of individuals who all lead very different but very active lifestyles. We prioritize healthy eating, but are often frustrated by our lack of options. Salads are great, but we find ourselves feeling hungry again less than an hour later. We made HYP for the people like us.
+          <h3>The Problem</h3>
+          <p>Salads are a great way to eat healthy... if they can keep you full and you don't waste your efforts on a fatty sugary dressing. We saw a place in the market for a dressing that not only doesn’t have all the nasty stuff, but actually adds the benefit of protein to keep you fuller longer.
           </p>
         </div>
-        <div class="small-image">
-        </div>
-        <div class="about-text about-text-one">
-          <h3>Our Mission</h3>
-          <p>As a team, we want to help people overcome the issues that we face everyday by making healthy, and fulfilling eating easier and more accessible to everyone.
-          </p>
-        </div>
-
-        <div class="small-image small-image-hidden">
-        </div>
-        <div class="about-text about-text-two">
-          <h3>What We Made</h3>
-          <p>The solution that we divised is a salad topping or dip that is jampacked with 10g of protein per serving plus all the other good stuff like gluten free, non-gmo, organic and vegan.
-          </p>
-        </div>
-        <div class="small-image small-image-shown">
-        </div>
-
       </div>
     </div>
+    <div class="the-solution">
+      <div class="container">
+        <div class="small-image small-image-solution">
+        </div><div class="about-text about-text-one">
+          <h3>The Solution</h3>
+          <p>The solution that we divised is a salad topping or dip that is jampacked with 10g of protein per serving plus all the other good stuff like gluten free, non-gmo, organic and vegetarian.
+          </p>
+          <a href="products.html">Checkout the product &#8594;</a>
+        </div>
+      </div>
+    </div>
+    <div class="the-team clearfix">
+      <div class="container">
+        <h3>Meet the Team</h3>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/stein.jpg"/>
+          <h4>Stein Kretsinger</h4>
+          <p>
+            <span class="bold">Director of Finances</span> <br>Stein graduated from the University of Virginia first with a BS and then an MS in Systems Engineering. He then went on to found Advertising.com and is now the proud father of two pygmy goats. 
+          </p>
+        </div>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/derek.jpg"/>
+          <h4>Derek Mansfield</h4>
+          <p>
+            <span class="bold">Director of Operations</span> <br>Derek earned his MBA from Northwestern University's Kellogg School of Management. Since then, Derek has has managed a variety of different positions involving retail.
+          </p>
+        </div>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/ian.jpg"/>
+          <h4>Ian Pasquarelli</h4>
+          <p>
+            <span class="bold">Director of Product Development</span> <br>Ian earned an MS in Agriculture and Life Sciences, Food Safety and was most recently involved in founding The Kitchen Network - a food tech startup.
+          </p>
+        </div>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/yaeji.jpg"/>
+          <h4>Yae Ji Cha</h4>
+          <p>
+          <span class="bold">Head of Brand Development</span><br>Yae Ji recently graduated from the University of Virginia with a BA in media studies. She spent the summer of 2017 working as a Digital Marketing Fellow at HackCville.
+          </p>
+        </div>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/matt.jpg"/>
+          <h4>Matthew Han</h4>
+          <p><span class="bold">Head of Media</span><br>Matt recently finished his first year at the University of Virginia and is planning to major in Computer Science and Studio Art. Matt spent summer 2017 as a Web Development Fellow at HackCville.</p>
+        </div>
+        <div class="col-md-4 team-member-col">
+          <img class="team-member" src="images/chap2.jpg"/>
+          <h4>Chapman Monroe</h4>
+          <p><span class="bold">Head of Web Development</span><br>Chapman just finished her second year at the University of Virginia and is majoring in systems engineering. She spent the summer of 2017 working as a Web Development Fellow at HackCville.</p>
+        </div>
+      </div>
+    </div>
+    <div class="the-solution">
+      <div class="container"> 
+        <div class="small-image small-image-hidden small-image-mission">
+        </div><div class="about-text about-text-two">
+          <h3>Our Mission</h3>
+          <p>
+            Our mission is to make healthy eating easy, worthwhile, delicious, and convenient. We do this through a knowledge based first on food science and nutrition to design the best and most filling dressing you’ve ever had.
+          </p>
+        </div><div class="small-image small-image-shown small-image-mission">
+        </div>
+      </div>
+    </div>  
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-    <div class="cta-container">
+   <div class="cta-container">
       <div class="container">
-         <button type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</button>
-         <button type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</button>
-          <button type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</button>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
+         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
       </div>
     </div>
 
