--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <link rel='stylesheet' href='styles.css' type='text/css' />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,23 +21,26 @@
   <body>
   
   <!-- ~~~~~~~~~~~~~~ NAV BAR ~~~~~~~~~~~~~~~~~~~~~ -->
-   <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" href="index.html">
+            HYP
+          </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="nav-item"><a href="about.html">about</a></li>
-            <li class="active nav-item"><a href="index.html"><img class="logo" src="images/mr.topper.svg"></a></li>
-            <li class="nav-item"><a href="products.html">products</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="about.html">about</a></li>
+          <li><a href="products.html">products</a></li>
+        </ul>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">Interested?</a>
       </div>
     </nav>
 
@@ -45,9 +49,10 @@
       <div class="overlay">
       <div class="container">
         <div class="title">
-          <h1>HYP: Salad Topper</h1>
           <img class="homepage-image" src="images/mr.topper.svg">
-          <h2>Because a salad shouldn't leave you hungry.</h2>
+          <h1>HYP</h1>
+          <h4>salad topper</h4>
+          <h2><span class="green">Because salad shouldn't leave you hungry.</span></h2>
         </div>
       </div>
       </div>
@@ -58,20 +63,22 @@
     <div class="button-container container">
       <p class="button-list">
         <button type="button" class="btn btn-lg btn-green">10g Protein</button>
-        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-        <button type="button" class="btn btn-lg btn-green">Vegan</button>
-        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
+        <button type="button" class="btn btn-lg btn-green">Non GMO</button>
+        <button type="button" class="btn btn-lg btn-green">Vegetarian</button>
+        <button type="button" class="btn btn-lg btn-green">Gluten Free</button>
         <button type="button" class="btn btn-lg btn-green">Organic</button>
       </p>
     </div>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-    <div class="cta-container">
+     <div class="cta-container">
       <div class="container">
-         <button type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</button>
-         <button type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</button>
-         <button type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</button>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
+         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
       </div>
     </div>
 
