added SEO tags and social media links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="HYP Salad Topper: An organic, gluten free, non-GMO approach to salad dressing. 10g of healthy protein in every serving">
+    <meta name="keywords" content="post workout snack, protein bars, protein supplement, healthy salad dressing, protein drink, healthy protein, gluten free salad dressing, HYP, HYP Foods, HYP Salad Topper, Protein sources, what foods are high in protein, low calorie protein">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>HYP: High Protein Salad Dressing</title>
+    <title>HYP: High Protein Salad Topper</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +19,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/svg" href="images/mr.topper.svg">
   </head>
   <body>
   
@@ -52,7 +55,7 @@
           <img class="homepage-image" src="images/mr.topper.svg">
           <h1>HYP</h1>
           <h4>salad topper</h4>
-          <h2><span class="green">Because salad shouldn't leave you hungry.</span></h2>
+          <h2>Because salad shouldn't leave you hungry.</h2>
         </div>
       </div>
       </div>
@@ -78,7 +81,7 @@
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
          <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
-         <a class="btn btn-social-icon btn-instagram" href="" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypsaladtopper/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
       </div>
     </div>
 
