--- a/about.html
+++ b/about.html
@@ -4,20 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="HYP Salad Topper: An organic, gluten free, non-GMO approach to salad dressing. 10g of healthy protein in every serving">
+    <meta name="keywords" content="post workout snack, protein bars, protein supplement, healthy salad dressing, protein drink, healthy protein, gluten free salad dressing, HYP, HYP Foods, HYP Salad Topper, Protein sources, what foods are high in protein, low calorie protein">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>HYP: High Protein Salad Dressing</title>
+    <title>HYP: High Protein Salad Topper</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link rel='stylesheet' href='styles.css' type='text/css' />
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/svg" href="images/mr.topper.svg">
   </head>
   <body>
   
@@ -74,7 +76,7 @@
           <img class="team-member" src="images/stein.jpg"/>
           <h4>Stein Kretsinger</h4>
           <p>
-            <span class="bold">Director of Finances</span> <br>Stein graduated from the University of Virginia first with a BS and then an MS in Systems Engineering. He then went on to found Advertising.com and is now the proud father of two pygmy goats. 
+            <span class="bold">Director of Finances</span> <br>Stein graduated from the University of Virginia first with a BS and then an MS in Systems Engineering. He is now the proud father of two pygmy goats. 
           </p>
         </div>
         <div class="col-md-4 team-member-col">
@@ -116,7 +118,7 @@
         </div><div class="about-text about-text-two">
           <h3>Our Mission</h3>
           <p>
-            Our mission is to make healthy eating easy, worthwhile, delicious, and convenient. We do this through a knowledge based first on food science and nutrition to design the best and most filling dressing you’ve ever had.
+            Our mission is to make healthy eating worthwhile, delicious, and convenient. Using our knowledge of food science and nutrition, we aim to design the best tasting and most filling salad topper you’ve ever had.
           </p>
         </div><div class="small-image small-image-shown small-image-mission">
         </div>
@@ -131,7 +133,7 @@
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
          <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
-         <a class="btn btn-social-icon btn-instagram" href="" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypsaladtopper/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
       </div>
     </div>
 
