changed the buttons to icons

--- a/index.html
+++ b/index.html
@@ -64,14 +64,38 @@
     <!-- ~~~~~~~~~~~~~~~~~~~~ BUTTONS ~~~~~~~~~~~~~~~~~~ -->
 
     <div class="button-container container">
-      <p class="button-list">
-        <button type="button" class="btn btn-lg btn-green">10g Protein</button>
-        <button type="button" class="btn btn-lg btn-green">Non GMO</button>
-        <button type="button" class="btn btn-lg btn-green">Vegetarian</button>
-        <button type="button" class="btn btn-lg btn-green">Gluten Free</button>
-        <button type="button" class="btn btn-lg btn-green">Organic</button>
-      </p>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-1 icon-box">
+          <i class="fa fa-bolt fa-5x" aria-hidden="true"></i>
+          <h5>10g Protein</h5>
+        </div>
+        <div class="col-md-2 icon-box">
+          <i class="fa fa-heart fa-5x" aria-hidden="true"></i>
+          <h5>Non GMO</h5>
+        </div>
+        <div class="col-md-2 icon-box">
+          <i class="fa fa-leaf fa-5x" aria-hidden="true"></i>
+          <h5>Vegetarian</h5>
+        </div>
+        <div class="col-md-2 icon-box">
+          <i class="fa fa-cutlery fa-5x" aria-hidden="true"></i>
+          <h5>Gluten Free</h5>
+        </div>
+        <div class="col-md-2 icon-box">
+          <i class="fa fa-globe fa-5x" aria-hidden="true"></i>
+          <h5>Organic</h5>
+        </div>
+      </div>
     </div>
+
+      <!--<p class="button-list">
+        <button type="button" class="btn btn-lg btn-blue not-btn">10g Protein</button>
+        <button type="button" class="btn btn-lg btn-blue not-btn">Non GMO</button>
+        <button type="button" class="btn btn-lg btn-blue not-btn">Vegetarian</button>
+        <button type="button" class="btn btn-lg btn-blue not-btn">Gluten Free</button>
+        <button type="button" class="btn btn-lg btn-blue not-btn">Organic</button>
+      </p>
+    </div> -->
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
