--- a/index.html
+++ b/index.html
@@ -68,34 +68,37 @@
         <div class="col-md-2 col-md-offset-1 icon-box">
           <i class="fa fa-bolt fa-5x" aria-hidden="true"></i>
           <h5>10g Protein</h5>
-        </div>
-        <div class="col-md-2 icon-box">
+        </div><div class="col-md-2 icon-box">
           <i class="fa fa-heart fa-5x" aria-hidden="true"></i>
           <h5>Non GMO</h5>
-        </div>
-        <div class="col-md-2 icon-box">
+        </div><div class="col-md-2 icon-box">
           <i class="fa fa-leaf fa-5x" aria-hidden="true"></i>
           <h5>Vegetarian</h5>
-        </div>
-        <div class="col-md-2 icon-box">
+        </div><div class="col-md-2 icon-box">
           <i class="fa fa-cutlery fa-5x" aria-hidden="true"></i>
           <h5>Gluten Free</h5>
-        </div>
-        <div class="col-md-2 icon-box">
+        </div><div class="col-md-2 icon-box icon-box-last">
           <i class="fa fa-globe fa-5x" aria-hidden="true"></i>
           <h5>Organic</h5>
         </div>
       </div>
     </div>
 
-      <!--<p class="button-list">
-        <button type="button" class="btn btn-lg btn-blue not-btn">10g Protein</button>
-        <button type="button" class="btn btn-lg btn-blue not-btn">Non GMO</button>
-        <button type="button" class="btn btn-lg btn-blue not-btn">Vegetarian</button>
-        <button type="button" class="btn btn-lg btn-blue not-btn">Gluten Free</button>
-        <button type="button" class="btn btn-lg btn-blue not-btn">Organic</button>
-      </p>
-    </div> -->
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~ IMAGES ~~~~~~~~~~~~~~~~~~~~ -->
+    <div class="the-solution">
+      <div class="home-images container clearfix">
+        <div class="image-row clearfix"> 
+          <div class="col-sm-4 image-div"> 
+            <h4>
+              Convenient single serve pouches means HYP goes everywhere you go! 
+            </h4>
+          </div>
+          <div class="col-sm-8 image-div">  
+            <img class="home-image home-image-long" src="images/gym-bag.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
