fleshed out the images section of the home page

--- a/index.html
+++ b/index.html
@@ -97,6 +97,27 @@
             <img class="home-image home-image-long" src="images/gym-bag.jpg">
           </div>
         </div>
+
+        <div class="image-row clearfix">   
+          <div class="col-sm-8 desk">  
+            <img class="home-image home-image-long home-image-desk" src="images/desk.jpg">
+          </div>
+          <div class="col-sm-4 image-div"> 
+            <h4>
+              Spice up healthy afternoon snacks by using HYP as a dip!  
+            </h4>
+          </div>
+        </div>
+
+        <div class="sep">
+          <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="image-row clearfix"> 
+          <div class="image-div">  
+            <img class="home-image carrot-gif" src="images/carrot-gif.gif">
+          </div>
+        </div>
+      
       </div>
     </div>
 
