added kickstarter video to the site using an embed link from youtube

--- a/about.html
+++ b/about.html
@@ -145,6 +145,15 @@
       </div>
     </div>  
 
+    <div class="container clearfix">
+      <div class="who-we-are-text clearfix">
+         <h3>Kickstarter Video</h3>
+         <div class="youtube-video" style="text-align: center;">
+          <iframe width="560" height="315" style="float: middle;" src="https://www.youtube.com/embed/wG_6i4xsDsA" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
    <div class="cta-container">
